[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/stage/SolidTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actor/Exit.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/stage/GameCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/stage/DetailTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/stage/SpikeTileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/actor/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/stage/Stage.gd" type="Script" id=7]
[ext_resource path="res://src/actor/Passthrough.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/actor/Box.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/stage/ObscureMap.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/actor/Note.tscn" type="PackedScene" id=11]
[ext_resource path="res://media/image/crate_tiles.png" type="Texture" id=12]
[ext_resource path="res://media/image/8pixel.png" type="Texture" id=13]
[ext_resource path="res://media/image/solid_bricks.png" type="Texture" id=14]
[ext_resource path="res://media/image/bricks.png" type="Texture" id=15]

[sub_resource type="TileSet" id=1]
0/name = "solid_bricks.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0.760784, 0.764706, 0.780392, 1 )
0/region = Rect2( 0, 0, 16, 8 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "8pixel.png 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 0, 1, 0.33 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
4/name = "bricks.png 4"
4/texture = ExtResource( 15 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 0.372549, 0.341176, 0.309804, 1 )
4/region = Rect2( 0, 0, 40, 8 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 8, 8 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "crate_tiles.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 0, 0.529412, 0.317647, 1 )
5/region = Rect2( 0, 16, 24, 8 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 8, 8 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "crate_tiles.png 6"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 0.670588, 0.321569, 0.211765, 1 )
6/region = Rect2( 0, 24, 8, 8 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "8pixel.png 0"
0/texture = ExtResource( 13 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0, 1, 0, 0.14902 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
2/name = "solid_bricks.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 0.760784, 0.764706, 0.780392, 1 )
2/region = Rect2( 0, 0, 32, 8 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 8, 8 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="Stage" type="Node2D"]
script = ExtResource( 7 )
palette = 2
color_solid = Color( 0.792157, 0.576471, 0.85098, 1 )
color_back = Color( 0.219608, 0.172549, 0.411765, 1 )
color_grass = Color( 1, 0.509804, 0.713726, 1 )

[node name="SolidTileMap" parent="." instance=ExtResource( 1 )]
tile_set = SubResource( 1 )
tile_data = PoolIntArray( -589841, 536870913, 0, -589840, 536870913, 0, -589839, 536870913, 0, -589838, 536870913, 0, -589837, 536870913, 0, -589835, 536870912, 1, -589834, 0, 0, -589833, 536870912, 1, -589832, 536870912, 1, -589831, 536870912, 0, -589830, 536870912, 1, -589829, 536870912, 1, -589828, 0, 0, -589827, 536870912, 1, -589826, 536870912, 1, -589825, 536870912, 0, -655360, 536870912, 1, -655359, 0, 0, -655358, 536870912, 1, -655357, 536870912, 0, -655356, 536870912, 1, -655355, 536870912, 0, -655354, 536870912, 1, -524305, 536870913, 0, -524301, 0, 0, -524300, 536870912, 1, -524299, 536870912, 0, -589818, 0, 0, -589817, 536870912, 1, -589816, 536870912, 0, -458769, 536870913, 0, -458765, 536870912, 1, -524280, 536870912, 1, -393233, 536870913, 0, -393229, 0, 0, -458744, 0, 0, -327697, 536870913, 0, -327693, 0, 0, -393211, 0, 0, -393210, 536870912, 1, -393209, 536870912, 0, -393208, 536870912, 1, -262161, 536870913, 0, -262157, 536870912, 1, -262156, 0, 0, -262155, 536870912, 1, -262154, 536870912, 0, -327675, 0, 0, -196625, 536870913, 0, -196618, 536870912, 1, -262139, 536870912, 1, -131089, 536870913, 0, -131082, 0, 0, -131081, 536870912, 1, -131080, 536870912, 1, -131079, 536870912, 0, -131078, 536870912, 1, -196603, 536870912, 0, -65553, 536870913, 0, -131067, 536870912, 0, -17, 536870913, 0, -6, 536870912, 1, -65531, 536870912, 1, 65519, 536870913, 0, 65520, 536870913, 0, 65521, 536870913, 0, 65522, 536870913, 0, 65523, 536870913, 0, 65524, 536870913, 0, 65525, 536870913, 0, 65526, 536870913, 0, 65527, 536870913, 0, 65528, 536870913, 0, 65529, 536870913, 0, 65530, 0, 0, 65531, 536870912, 1, 65532, 536870912, 1, 65533, 0, 0, 65534, 536870912, 1, 65535, 536870912, 1, 0, 536870912, 0, 1, 536870912, 1, 2, 536870912, 1, 3, 0, 0, 4, 536870912, 1, 5, 536870912, 0 )

[node name="SpikeTileMap" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0 )

[node name="DetailTileMap" parent="." instance=ExtResource( 4 )]
z_index = -11
tile_set = SubResource( 2 )
tile_data = PoolIntArray( -655372, 5, 2, -655371, 5, 0, -655370, 5, 0, -655369, 5, 0, -655368, 5, 0, -655367, 5, 0, -655366, 5, 0, -655365, 536870917, 2, -655362, 5, 2, -655361, 5, 0, -720896, 5, 0, -720895, 5, 0, -720894, 536870917, 2, -589836, -1073741819, 0, -655353, 536870916, 3, -655352, 536870916, 1, -655351, 4, 3, -524296, 1610612742, 0, -524293, 1073741829, 2, -524292, 1610612742, 0, -524291, 5, 0, -524290, 1610612741, 2, -589822, 1610612742, 0, -589815, 536870916, 1, -589814, 4, 3, -458766, -2147483643, 2, -458764, 1610612741, 2, -458760, 1610612741, 0, -458756, 1610612742, 0, -524287, 5, 2, -524286, 5, 0, -524285, -1610612731, 2, -524284, 4, 2, -524283, 4, 3, -524279, 4, 0, -524278, 4, 3, -393230, -1073741819, 0, -393221, 5, 2, -393220, 5, 0, -393219, -1610612731, 2, -458751, -1073741819, 2, -458750, 5, 0, -458749, 1610612741, 2, -458743, 536870916, 1, -458742, 4, 3, -327694, -1073741819, 0, -327685, 5, 0, -327684, 5, 0, -327683, 5, 0, -327681, 536870916, 3, -393216, 536870916, 2, -393207, 536870916, 0, -393206, 536870916, 2, -262158, -1073741819, 0, -262149, -1073741819, 2, -262148, 5, 0, -262147, 1610612741, 2, -262145, 536870916, 3, -327680, 536870916, 2, -327673, 4, 2, -327672, 4, 0, -327671, 536870916, 2, -196622, -1073741819, 2, -196621, 1610612741, 0, -196620, 1610612741, 0, -196619, 1610612741, 0, -196617, -1610612731, 2, -262140, -2147483643, 2, -196604, -1073741819, 0, -65545, 1073741829, 2, -65544, 5, 0, -65543, 1610612741, 2, -131072, 5, 0, -131068, -1073741819, 2, -131066, -1610612731, 2, -14, 4, 2, -13, 4, 0, -12, 4, 3, -65536, 1610612742, 0, -65530, -1610612731, 0, 65521, 536870916, 3, 65522, 536870916, 0, 65523, 536870916, 1, 65524, 536870916, 0, 65525, 536870916, 2, 6, -1610612731, 0, 131058, 4, 2, 131059, 4, 0, 131060, 4, 3, 131068, 1073741829, 2, 131069, 1610612741, 0, 131070, 1610612741, 2, 65537, 1073741829, 2, 65538, 1610612741, 0, 65539, 1610612741, 0, 65540, 1610612741, 0, 65541, 1610612741, 0, 65542, 1610612741, 2 )

[node name="ObscureMap" parent="." instance=ExtResource( 10 )]
tile_set = SubResource( 3 )
tile_data = PoolIntArray( -524304, 0, 0, -524303, 0, 0, -524302, 0, 0, -458768, 536870912, 0, -458767, 536870912, 0, -458766, 0, 0, -393232, 536870912, 0, -393231, 536870912, 0, -393230, 0, 0, -327696, 0, 0, -327695, 0, 0, -327694, 0, 0, -262160, 0, 0, -262159, 0, 0, -262158, 0, 0, -196624, 0, 0, -196623, 0, 0, -196622, 0, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 0, -131088, 0, 0, -131087, 0, 0, -131086, 0, 0, -131085, 0, 0, -131084, 0, 0, -131083, 0, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 536870914, 2, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0 )

[node name="GameCamera" parent="." instance=ExtResource( 3 )]
position = Vector2( -16, -36 )

[node name="Actors" type="Node2D" parent="."]

[node name="Player" parent="Actors" instance=ExtResource( 6 )]
position = Vector2( -63, -32 )

[node name="Exit" parent="Actors" instance=ExtResource( 2 )]
position = Vector2( 53, -59 )

[node name="Passthrough3" parent="Actors" instance=ExtResource( 8 )]
position = Vector2( 8, -24 )

[node name="Passthrough4" parent="Actors" instance=ExtResource( 8 )]
position = Vector2( 16, -24 )

[node name="Passthrough7" parent="Actors" instance=ExtResource( 8 )]
position = Vector2( -24, -24 )

[node name="Passthrough8" parent="Actors" instance=ExtResource( 8 )]
position = Vector2( -16, -24 )

[node name="Box" parent="Actors" instance=ExtResource( 9 )]
position = Vector2( -92, -56 )

[node name="Box2" parent="Actors" instance=ExtResource( 9 )]
position = Vector2( -89, -48 )

[node name="Note" parent="Actors" instance=ExtResource( 11 )]
position = Vector2( -125, -61 )

[editable path="GameCamera"]
